# ros_e_gazebo

./: CMakeLists.txt  package.xml
launch/: exemplo.launch  exercicio1.launch  teleop.launch
sketch/: carrinho.ino
src/: exercicio1.cpp  hello.cpp  pubvel.cpp  subpose.cpp
